# Brewmetheus

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
brewmetheus/: __init__.py  alerts.py  beverages.py  cli.py  exporter.py  metrics.py  models.py  notify.py  params.py  pk_model.py  postmortem.py  predict.py  render.py  slo.py  snapshot.py  store.py  timeutil.py
grafana/: brewmetheus-dashboard.json
prometheus/: brewmetheus.rules.yml  prometheus.example.yml
tests/: test_alerts.py  test_beverages.py  test_cli.py  test_exporter.py  test_metrics.py  test_models.py  test_notify.py  test_params.py  test_pk_model.py  test_postmortem.py  test_predict.py  test_render.py  test_slo.py  test_snapshot.py  test_store.py  test_timeutil.py
